# boids

./: .gitignore  boids.profile  make_copy.bat  make_copy_debug.bat  make_copy_debug_no_const.bat  make_copy_debug_no_res.bat  make_copy_debug_no_res_no_const.bat  make_copy_debug_only_exe.bat  make_copy_no_const.bat  release_windows.bat  uncopy.txt
frameworks/: CMakeLists.txt
frameworks/cocos2d-x/cocos/2d/: CCLabel.cpp  CCLabel.h  CCLabelTextFormatter.cpp  CCLabelTextFormatter.h  CCNode.cpp  CCSprite.cpp  CCSpriteFrameCache.cpp  CCSpriteFrameCache.h  CCTMXLayer.cpp  CCTMXXMLParser.cpp  CCTMXXMLParser.h  Statistics.h  libcocos2d.vcxproj  libcocos2d.vcxproj.filters
frameworks/cocos2d-x/cocos/audio/: AudioEngine.cpp
frameworks/cocos2d-x/cocos/base/: CCDirector.cpp  CCDirector.h  CCScheduler.cpp  CCScheduler.h  CCScriptSupport.cpp  CCScriptSupport.h  CCValue.cpp  NetworkInterface.h  ccMacros.h
frameworks/cocos2d-x/cocos/platform/: CCFileUtils.cpp
frameworks/cocos2d-x/cocos/renderer/: CCGLProgram.cpp  CCGLProgram.h  CCGLProgramCache.cpp  CCTextureCache.cpp  CCTextureCache.h  ccShaders.cpp  ccShaders.h  shader_burn.frag  shader_burn.vert  shader_burn_noMVP.frag  shader_burn_noMVP.vert  shader_burn_no_mvp.frag  shader_burn_no_mvp.vert  shader_grey.frag  shader_grey.vert  shader_grey_no_mvp.frag  shader_grey_no_mvp.vert  shader_ice.frag  shader_ice.vert  shader_ice_noMVP.frag  shader_ice_noMVP.vert  shader_ice_no_mvp.frag  shader_ice_no_mvp.vert  shader_poison.frag  shader_poison.vert  shader_poison_noMVP.frag  shader_poison_noMVP.vert  shader_poison_no_mvp.frag  shader_poison_no_mvp.vert
frameworks/cocos2d-x/cocos/ui/: UIButton.cpp  UIButton.h  UIListView.h  UIText.cpp  UIText.h
frameworks/runtime-src/Classes/: AppDelegate.cpp  AppDelegate.h  ArmatureManager.cpp  ArmatureManager.h  BoidsMath.cpp  BoidsMath.h  CmdLineDebugger.cpp  CmdLineDebugger.h  CmdLineDebuggerLua.cpp  CmdLineDebuggerLua.h  Constants.h  Counter.cpp  Counter.h  CycledList.cpp  CycledList.h  EngineRelated.cpp  EngineRelated.h  LuaFunc.cpp  LuaFunc.h  LuaPlatform.cpp  LuaPlatform.h  LuaUtils.cpp  LuaUtils.h  Macro.h  MapData.cpp  MapData.h  MapDebugger.cpp  MapDebugger.h  Profile.cpp  Profile.h  Random.h  Replay.cpp  Replay.h  ReplayComparer.cpp  ReplayComparer.h  Singleton.h  Trace.cpp  Trace.h  Utils.cpp  Utils.h
frameworks/runtime-src/Classes/AI/: AI.cpp  AI.h  AITest.cpp  AITest.h  AIUnit.cpp  AIUnit.h  BoidsPolygon.cpp  BoidsPolygon.h  BoidsPolygonEx.cpp  BoidsPolygonEx.h  BoostGeometryDef.h  Border.cpp  Border.h  Collidable.cpp  Collidable.h  GrassMonitor.cpp  GrassMonitor.h  NavMesh.cpp  NavMesh.h  Path.cpp  Path.h  Terrain.cpp  Terrain.h
frameworks/runtime-src/Classes/Editor/: BEHeaders.h  BETypes.cpp  BETypes.h  EditMode.cpp  EditMode.h  EditorHelper.cpp  EditorHelper.h  EditorModel.cpp  EditorModel.h  EditorModelDefines.h  EditorPositionNode.cpp  EditorPositionNode.h  EditorVisionNode.cpp  EditorVisionNode.h
frameworks/runtime-src/Classes/Protobuf/: config.h
frameworks/runtime-src/Classes/TmxParser/: TmxMap.cpp  TmxPoint.h  TmxPolygon.cpp  TmxPolyline.cpp  TmxTile.cpp  TmxTile.h  TmxTileset.cpp
frameworks/runtime-src/Classes/auto/: lua_boids_auto.cpp  lua_boids_auto.hpp
frameworks/runtime-src/Classes/behavior/: AttackBehavior.cpp  AttackBehavior.h  BehaviorBase.cpp  BehaviorBase.h  BehaviorHeader.h  GuardAttackBehavior.cpp  GuardAttackBehavior.h  GuardMoveBehavior.cpp  GuardMoveBehavior.h  IdleBehavior.cpp  IdleBehavior.h  MoveBehavior.cpp  MoveBehavior.h  PlayerAttackBehavior.cpp  PlayerAttackBehavior.h  PlayerMoveBehavior.cpp  PlayerMoveBehavior.h  PlayerSkillBehavior.cpp  PlayerSkillBehavior.h  SkillBehavior.cpp  SkillBehavior.h  TowerAttackBehavior.cpp  TowerAttackBehavior.h
frameworks/runtime-src/Classes/constant/: BoidsConstant.cpp  BoidsConstant.h  DebugMacro.h  DebugMacros.cpp  DebugMacros.h
frameworks/runtime-src/Classes/data/: DamageCalculate.cpp  DamageCalculate.h  PlayerInfo.cpp  PlayerInfo.h
frameworks/runtime-src/Classes/interface/: Updatable.cpp  Updatable.h
frameworks/runtime-src/Classes/logic/: EventAction.cpp  EventAction.h  EventTrigger.cpp  EventTrigger.h  GameTask.cpp  GameTask.h  MapLogic.cpp  MapLogic.h  Trigger.cpp  Trigger.h  WaveAction.cpp  WaveAction.h
frameworks/runtime-src/Classes/lua_cjson/: fpconv.c  lua_cjson.c  lua_cjson.h  strbuf.h
frameworks/runtime-src/Classes/manager/: AudioManager.cpp  AudioManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h
frameworks/runtime-src/Classes/manual/: ArgCheck.h  lua_boids_manual.cpp  (+1 more)
frameworks/runtime-src/proj.android/: .project  AndroidManifest.xml  build.xml
frameworks/runtime-src/proj.win32/: Boids.sln  Boids.vcxproj  Boids.vcxproj.filters  game.rc  main.cpp  resource.h
(+951 files in other folders)
